# goquant-oracle

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: cache.rs  config.rs  db.rs  health_monitor.rs  main.rs  models.rs  oracle_manager.rs  price_aggregator.rs  pyth_client.rs  switchboard_client.rs  utils.rs
backend/src/routes/: rest.rs  ws.rs
docs/: deployment.md  testing.md
migrations/: 001_create_price_history.sql  002_create_oracle_health.sql  003_create_deviation_alerts.sql  004_create_source_reliability.sql
programs/oracle/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/oracle/src/instructions/: get_pyth_price.rs  get_switchboard_price.rs  mod.rs  validate_price_consensus.rs
