[package]
name = "oracle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }

# FIX: enable WebSocket support in axum
axum = { version = "0.7", features = ["ws"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
parking_lot = "0.12"

# Postgres
tokio-postgres = "0.7"
deadpool-postgres = "0.12"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# WebSockets
tokio-tungstenite = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

# FIX: required for WebSocket broadcaster
once_cell = "1.19"

# FIX: required for ws stream handling (StreamExt, SinkExt)
futures = "0.3"
